# silkroute

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  init.sh  litellm_config.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: Backlog.md  OBSERVER_ARCH.md  OBSERVER_QUALITY.md  PROJECT_CONTEXT.md  hooks.json
.claude/OBSERVER_HISTORY/: OBSERVER_ALERTS_2026-02-22.md  OBSERVER_ARCH_2026-02-21.md  OBSERVER_ARCH_2026-02-22.md  OBSERVER_QUALITY_2026-02-21.md  OBSERVER_QUALITY_2026-02-22.md
.claude/agents/: observer-full.md  observer-lite.md
.claude/archive/: 2026-02-22-OBSERVER_ARCH.md  2026-02-22-OBSERVER_QUALITY.md  2026-02-28-phase0-OBSERVER_QUALITY.md  2026-02-28-phase1-OBSERVER_ALERTS.md  2026-02-28-phase1-OBSERVER_ARCH.md  2026-02-28-phase1-OBSERVER_QUALITY.md  2026-02-28-phase2-OBSERVER_ALERTS.md  2026-02-28-phase2-OBSERVER_ARCH.md  2026-02-28-phase2-OBSERVER_QUALITY.md  2026-02-28-phase3-OBSERVER_ARCH.md  2026-02-28-phase3-OBSERVER_QUALITY.md  2026-02-28-phase4-OBSERVER_ARCH.md  2026-02-28-phase4-OBSERVER_QUALITY.md  2026-03-01-phase5-OBSERVER_QUALITY.md  (+10 more)
.pi/: SYSTEM.md  models.json  settings.json
dashboard/: next.config.ts  package-lock.json  package.json
demo/: agent_ready_av_demo.py  mock_epiphan_mcp.py  pearl_mock_server.py  self_healing_demo.py
docs/: av-demo-guide.md  edge-deployment.md
scripts/: start.sh
sql/: init.sql
tests/: conftest.py  test_agent_memory.py  test_api_budget_models.py  test_api_context7.py  test_api_demo.py  test_api_health.py  test_api_memories.py  test_api_projects.py  test_api_research.py  test_api_runtime.py  test_api_security.py  test_api_skills.py  test_api_supervisor.py  test_api_tasks.py  test_autoresearch.py  test_budget_global.py  test_budget_snapshots.py  test_builtin_skills.py  test_classifier.py  test_cli.py  test_code_writer.py  test_context7_client.py  test_context_manager.py  test_cost_guard.py  test_daemon_heartbeat.py  test_daemon_queue.py  test_daemon_scheduler.py  test_daemon_server.py  test_daemon_worker.py  test_db_cost_logs.py  test_db_memories.py  test_db_migrations.py  test_db_pool.py  test_db_projects.py  test_db_projects_crud.py  test_db_sessions.py  test_db_supervisor.py  test_db_tool_audit.py  test_decomposer.py  test_exception_hardening.py  (+38 more)
(+154 files in other folders)
