[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silkroute"
version = "0.1.0"
description = "The first AI agent orchestrator built exclusively for Chinese LLMs — cost-optimized, China-native, with per-project budget governance."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Tim Kipper", email = "tim@scientiacapital.com" },
]
keywords = [
    "ai-agent",
    "chinese-llm",
    "deepseek",
    "qwen",
    "glm",
    "cost-optimization",
    "llm-routing",
    "autonomous-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.55.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "apscheduler>=3.10.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
mantis = [
    "deepagents>=0.4.1,<0.5.0",
    "langchain-openai>=0.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "fakeredis>=2.21.0",
]
local = [
    "ollama>=0.3.0",
]

[project.scripts]
silkroute = "silkroute.cli:main"

[project.urls]
Homepage = "https://github.com/ScientiaCapital/silkroute"
Documentation = "https://github.com/ScientiaCapital/silkroute#readme"
Repository = "https://github.com/ScientiaCapital/silkroute"
Issues = "https://github.com/ScientiaCapital/silkroute/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/silkroute"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
